(WSDL_TESTS): Add googlesearch test (using the Google API wsdl). (clean): Add clean-up for googlesearch test.

--- a/regtests/makefile
+++ b/regtests/makefile
@@ -57,7 +57,7 @@ WSDL_ATESTS =
 else
 STD_TESTS   = $(RT_STD) $(RT_SOAP)
 OTH_TESTS   = tres check_mem
-WSDL_TESTS  = test_wsdl test_wsdl2 interoplab_main
+WSDL_TESTS  = test_wsdl test_wsdl2 interoplab_main googlesearch
 WSDL_ATESTS = test_wsdl3 
 endif
 
@@ -183,4 +183,4 @@ clean:
 	-rm -f ?.upload.* strm-*.log cert.pem run1 run2 gmem.out $(ALL_EXEC)
 	-rm -f alldifs *.log run? check_mem.run? hello_demo* *.tmp
 	-rm -f stockquoteservice* stock_quote_service*
-	-rm -f interoplab-* interoplab.ad*
+	-rm -f interoplab-* interoplab.ad* googlesearchservice*
