--- a/docs/.cvsignore
+++ b/docs/.cvsignore
@@ -64,6 +64,8 @@ aws.tp
 aws.txt
 aws.vr
 soap-client.ads.texi
+soap-dispatchers-callback.ads.texi
+soap-dispatchers.ads.texi
 soap-message-xml.ads.texi
 soap-message.ads.texi
 soap-parameters.ads.texi
