(build): Put $(OTH_TESTS) at the end. check_mem should be at the  end as it modify a source and will trigger many recompilations.

--- a/regtests/makefile
+++ b/regtests/makefile
@@ -70,7 +70,7 @@ run : build checks
 
 force:
 
-build: init $(STD_TESTS) $(OTH_TESTS) $(WSDL_TESTS) $(WSDL_ATESTS)
+build: init $(STD_TESTS) $(WSDL_TESTS) $(WSDL_ATESTS) $(OTH_TESTS)
 
 init:
 	cp ../demos/cert.pem .
