Add section to build AWS based on project files. (gbuild): New target. (gclean): Idem. (gsetup): Idem.

--- a/config/makefile
+++ b/config/makefile
@@ -20,3 +20,12 @@ setup: ../src/aws-translator-conversion.adb
 
 clean:
 	-rm -f *.o *.ali *.~*.*~ *.exe
+
+#############################################################################
+# Configuration for GNAT Projet Files
+
+gsetup: setup
+
+gclean: clean
+
+gbuild:
