--- a/ssl/makefile
+++ b/ssl/makefile
@@ -24,3 +24,22 @@ build: ssl-thin ssl-wrappers libnosslaws.a
 
 clean:
 	-rm -f *.ali *.o *.a
+
+#############################################################################
+# Configuration for GNAT Projet Files
+
+gbuild:
+	gnatmake -Pssl -XAWS_BUILD=${PRJ_BUILD} -XXMLADA=${PRJ_XMLADA}
+	gnatmake -Pnossl -XAWS_BUILD=${PRJ_BUILD} -XXMLADA=${PRJ_XMLADA}
+
+gsetup:
+	-mkdir -p ../.build/debug/ssl/obj
+	-mkdir -p ../.build/debug/ssl/lib
+	-mkdir -p ../.build/debug/ssl/lobj
+	-mkdir -p ../.build/release/ssl/obj
+	-mkdir -p ../.build/release/ssl/lib
+	-mkdir -p ../.build/release/ssl/lobj
+
+gclean: clean
+	$(RM) -fr ../.build/debug/ssl
+	$(RM) -fr ../.build/release/ssl
