Add many variables for tools used by AWS's build.

--- a/makefile.conf
+++ b/makefile.conf
@@ -58,3 +58,21 @@ endif
 # AWS will be installed under $(INSTALL)/AWS. Update this variable to point to
 # the install directory.
 INSTALL	 = $(HOME)
+
+##############################################################################
+# Tools used by AWS
+AR       = ar
+GREP	 = grep
+SED	 = sed
+DIFF	 = diff
+GZIP	 = gzip
+TAR	 = tar
+GNATMAKE = gnatmake
+WINDRES	 = windres
+DLLTOOL	 = dlltool
+DLL2DEF	 = dll2def
+RM	 = rm
+MKDIR	 = mkdir
+CP	 = cp
+MV	 = mv
+CHMOD	 = chmod
