--- a/win32/makefile
+++ b/win32/makefile
@@ -18,26 +18,27 @@ build: $(RES) $(IMPORT_LIB)
 
 libssl.a: libssl32.dll
 	dll2def libssl32.dll > ssl.def
-	dlltool --def ssl.def --dllname libssl32.dll \
+	$(DLLTOOL) --def ssl.def --dllname libssl32.dll \
 	        --output-lib libssl.a
-	rm ssl.def
+	$(RM) ssl.def
 
 libcrypto.a: libeay32.dll
-	dll2def libeay32.dll > crypto.def
-	dlltool --def crypto.def --dllname libeay32.dll \
+	$(DLL2DEF) libeay32.dll > crypto.def
+	$(DLLTOOL) --def crypto.def --dllname libeay32.dll \
 		--output-lib libcrypto.a
-	rm crypto.def
+	$(RM) crypto.def
 
 libldap.a: wldap32.def
-	dlltool --def wldap32.def --dllname wldap32.dll --output-lib libldap.a
+	$(DLLTOOL) --def wldap32.def --dllname wldap32.dll \
+		--output-lib libldap.a
 
 build_lib: libssl.a libcrypto.a
 
 aws.coff: aws.rc
-	windres -i aws.rc -o aws.coff
+	$(WINDRES) -i aws.rc -o aws.coff
 
 clean:
-	-rm -f *.a *~ aws.coff
+	-$(RM) -f *.a *~ aws.coff
 
 #############################################################################
 # Configuration for GNAT Projet Files
