Make dependence aws-net-std.adb from  ../config/aws-net-std__adasockets.adb  or from ../config/aws-net-std__gnat.adb, otherwise update of  ../config/aws-net-std__adasockets.adb or  ../config/aws-net-std__gnat.adb does not cause update of  aws-net-std.adb

--- a/src/makefile
+++ b/src/makefile
@@ -50,10 +50,11 @@ build: $(CONF_UNITS) $(UNITS)
 aws-translator-conversion.adb:
 	${MAKE} -C ../config setup
 
-aws-net-std.adb:
 ifdef ADASOCKETS
+aws-net-std.adb: ../config/aws-net-std__adasockets.adb
 	$(CP) ../config/aws-net-std__adasockets.adb aws-net-std.adb
 else
+aws-net-std.adb: ../config/aws-net-std__gnat.adb
 	$(CP) ../config/aws-net-std__gnat.adb aws-net-std.adb
 endif
 
