Add GNATMAKE_FOR_HOST variable. Support for cross-compilers.

--- a/makefile.conf
+++ b/makefile.conf
@@ -16,7 +16,7 @@
 # case uncomment XMLADA variable and set it to point to the XMLADA install
 # directory.
 #
-#XMLADA	 = /usr/Ada.Libraries/xmlada
+XMLADA	 = /usr/Ada.Libraries/xmlada
 
 ##############################################################################
 # AWS support SSL (Secure Socket Layer). The SSL support is always built-in
@@ -61,18 +61,19 @@ INSTALL	 = $(HOME)
 
 ##############################################################################
 # Tools used by AWS
-AR       = ar
-GREP	 = grep
-SED	 = sed
-DIFF	 = diff
-GZIP	 = gzip
-TAR	 = tar
-GNATMAKE = gnatmake
-WINDRES	 = windres
-DLLTOOL	 = dlltool
-DLL2DEF	 = dll2def
-RM	 = rm
-MKDIR	 = mkdir
-CP	 = cp
-MV	 = mv
-CHMOD	 = chmod
+AR 		  = ar
+GREP		  = grep
+SED	 	  = sed
+DIFF	 	  = diff
+GZIP	 	  = gzip
+TAR	 	  = tar
+GNATMAKE	  = gnatmake
+GNATMAKE_FOR_HOST = gnatmake
+WINDRES	 	  = windres
+DLLTOOL	 	  = dlltool
+DLL2DEF		  = dll2def
+RM	 	  = rm
+MKDIR	 	  = mkdir
+CP	 	  = cp
+MV	 	  = mv
+CHMOD	 	  = chmod
