Comment out XMLADA, fix previous check-in.

--- a/makefile.conf
+++ b/makefile.conf
@@ -16,7 +16,7 @@
 # case uncomment XMLADA variable and set it to point to the XMLADA install
 # directory.
 #
-XMLADA	 = /usr/Ada.Libraries/xmlada
+#XMLADA	 = /usr/Ada.Libraries/xmlada
 
 ##############################################################################
 # AWS support SSL (Secure Socket Layer). The SSL support is always built-in
