(clean): Call zlib clean. (build_zlib): New target. (build): Add build_zlib.

--- a/include/makefile
+++ b/include/makefile
@@ -38,10 +38,14 @@ all:
 ../src/aws-os_lib.adb:
 	$(CP) ../config/aws-os_lib__gnat.adb ../src/aws-os_lib.adb
 
-build: ../src/aws-os_lib.adb $(UNITS)
+build_zlib: force
+	${MAKE} -C zlib
+
+build: build_zlib ../src/aws-os_lib.adb $(UNITS)
 
 clean:
 	-$(RM) -f *.o *.ali
+	${MAKE} -C zlib clean
 
 #############################################################################
 # Configuration for GNAT Projet Files
