--- a/include/makefile
+++ b/include/makefile
@@ -39,6 +39,7 @@ all:
 	$(CP) ../config/aws-os_lib__gnat.adb ../src/aws-os_lib.adb
 
 build_zlib: force
+	echo "Building libz.a (Zlib library)"
 	${MAKE} -C zlib
 
 build: build_zlib ../src/aws-os_lib.adb $(UNITS)
