--- a/regtests/.cvsignore
+++ b/regtests/.cvsignore
@@ -11,6 +11,8 @@ b~auth2.adb
 b~auth2.ads
 b~check_mem.adb
 b~check_mem.ads
+b~compress.adb
+b~compress.ads
 b~ctab.adb
 b~ctab.ads
 b~dirop.adb
@@ -140,6 +142,7 @@ b~workorder.ads
 check_mem.res
 check_mem.run1
 check_mem.run2
+compress.res
 ctab.res
 ctab.tmp
 dirop.res
